==> mbed-ce/mbed-os/targets/TARGET_RENESAS/TARGET_RA/can_api.c <==
#include "mbed_assert.h"
#include "mbed_error.h"
#include "can_api.h"
#include "pinmap.h"
#include "r_canfd.h"
#include "r_can.h"
#define MBED_CAN_MAILBOX_TX 0

void can_init_freq(can_t *obj, PinName rd, PinName td, int hz
#ifdef DEVICE_CAN_FD
                   , int data_hz
#endif
                  )
{
    MBED_ASSERT(obj);

    int per_index = -1;
    const can_instance_t *inst = can_instance_from_pins(rd, td, &per_index);
    MBED_ASSERT(inst != NULL);

    can_configure_pins_from_pins(rd, td);

    obj->instance     = inst;
    obj->irq_context  = 0;
    obj->hz           = hz;
#ifdef DEVICE_CAN_FD
    obj->data_hz      = data_hz;
    canfd_default_accept_all((const canfd_extended_cfg_t*)inst->p_cfg->p_extend);
#endif

    const can_cfg_t *cfg_rom = (const can_cfg_t *) inst->p_cfg;
    obj->cfg_copy            = *cfg_rom;
    obj->cfg_copy.p_context = obj;

    fsp_err_t err = obj->instance->p_api->open(obj->instance->p_ctrl, &obj->cfg_copy);
    MBED_ASSERT(FSP_SUCCESS == err);

    (void) can_frequency(obj, hz
#ifdef DEVICE_CAN_FD
                         , data_hz
#endif
                        );
}

void can_free(can_t *obj)
{
    if (!obj || !obj->instance) {
        return;
    }

    (void) obj->instance->p_api->close(obj->instance->p_ctrl);
    obj->instance    = NULL;
    obj->irq_context = 0;
}

int can_frequency(can_t *obj, int hz
#ifdef DEVICE_CAN_FD
                  , int data_hz
#endif
                 )
{
    MBED_ASSERT(obj);
    MBED_ASSERT(obj->instance);

    obj->instance->p_api->close(obj->instance->p_ctrl);

#ifdef DEVICE_CAN_FD
    // Use PLL/PLL1Q for CAN FD clock source
    uint32_t canclk = R_BSP_SourceClockHzGet(BSP_CFG_CANFDCLK_SOURCE) / canfd_get_clock_div(BSP_CFG_CANFDCLK_DIV) ;
#else
    // Use PCLKB for CAN clock source
    uint32_t canclk = R_FSP_SystemClockHzGet(FSP_PRIV_CLOCK_PCLKB);
#endif

    if (!calc_bit_timing(canclk, hz, obj->cfg_copy.p_bit_timing, 0.75f)) {
        return 0;
    }

    obj->hz = hz;
#ifdef DEVICE_CAN_FD
    canfd_extended_cfg_t *ext_rom = (canfd_extended_cfg_t *) obj->cfg_copy.p_extend;

    obj->data_hz = data_hz;
    if (data_hz > 0) {
        if (!calc_bit_timing(canclk, data_hz, ext_rom->p_data_timing, 0.80f)) {
            return 0;
        }
    }
#endif

    fsp_err_t err = obj->instance->p_api->open(obj->instance->p_ctrl, &obj->cfg_copy);
    return (err == FSP_SUCCESS);
}

int can_write(can_t *obj, CAN_Message msg)
{
    MBED_ASSERT(obj);
    MBED_ASSERT(obj->instance);

    can_frame_t frame;
    mbed_to_can_frame(&msg, &frame);

    fsp_err_t err = obj->instance->p_api->write(obj->instance->p_ctrl, MBED_CAN_MAILBOX_TX, &frame);
    return (err == FSP_SUCCESS) ? 1 : 0;
}

int can_read(can_t *obj, CAN_Message *msg, int handle)
{
    FSP_PARAMETER_NOT_USED(handle);

    if (obj->rx_head == obj->rx_tail) {
        return 0;   // no data
    }

    can_frame_t *f = &obj->rx_queue[obj->rx_tail];
    obj->rx_tail = (obj->rx_tail + 1) % MBED_CAN_RX_QUEUE_SIZE;

    can_frame_to_mbed(f, msg);
    return 1;
}

int can_mode(can_t *obj, CanMode mode)
{
    MBED_ASSERT(obj);
    MBED_ASSERT(obj->instance);

    can_operation_mode_t op_mode = CAN_OPERATION_MODE_NORMAL;
    can_test_mode_t      test_mode = CAN_TEST_MODE_DISABLED;

    switch (mode) {

        case MODE_RESET:
            op_mode = CAN_OPERATION_MODE_RESET;
            test_mode = CAN_TEST_MODE_DISABLED;
            break;

        case MODE_NORMAL:
            op_mode = CAN_OPERATION_MODE_NORMAL;
            test_mode = CAN_TEST_MODE_DISABLED;
            break;

        case MODE_SILENT:
            op_mode = CAN_OPERATION_MODE_NORMAL;
            test_mode = CAN_TEST_MODE_LISTEN;
            break;

        case MODE_TEST_LOCAL:
            op_mode = CAN_OPERATION_MODE_NORMAL;
            test_mode = CAN_TEST_MODE_LOOPBACK_INTERNAL;
            break;

        case MODE_TEST_GLOBAL:
            op_mode = CAN_OPERATION_MODE_NORMAL;
            test_mode = CAN_TEST_MODE_LOOPBACK_EXTERNAL;
            break;

        case MODE_TEST_SILENT:
            op_mode = CAN_OPERATION_MODE_NORMAL;
            test_mode = CAN_TEST_MODE_LISTEN;
            break;

        default:
            return 0;
    }

    fsp_err_t err = obj->instance->p_api->modeTransition(
        obj->instance->p_ctrl,
        op_mode,
        test_mode
    );

    return (err == FSP_SUCCESS) ? 1 : 0;
}

int can_filter(can_t *obj, uint32_t id, uint32_t mask, CANFormat format, int32_t handle)
{
    MBED_ASSERT(obj);

    obj->instance->p_api->close(obj->instance->p_ctrl);

    const can_instance_t *inst = obj->instance;
    const can_cfg_t *cfg = inst->p_cfg;
    canfd_extended_cfg_t *ext = (canfd_extended_cfg_t *) cfg->p_extend;

    canfd_afl_entry_t *afl = (canfd_afl_entry_t *) ext->p_afl;
    int32_t rule_num = CANFD_CFG_AFL_CH0_RULE_NUM;
    int32_t idx = (handle >= 0 && handle < rule_num) ? handle : 0;

    afl[idx].id.id = id;
    afl[idx].id.frame_type = CAN_FRAME_TYPE_DATA;
    afl[idx].id.id_mode = (format == CANStandard ? CAN_ID_MODE_STANDARD: CAN_ID_MODE_EXTENDED);
    afl[idx].mask.mask_id = mask;
    afl[idx].mask.mask_id_mode = (format == CANExtended) ? CAN_ID_MODE_EXTENDED : CAN_ID_MODE_STANDARD;
    afl[idx].mask.mask_frame_type = CAN_FRAME_TYPE_DATA;
    afl[idx].destination.minimum_dlc = 0;
    afl[idx].destination.fifo_select_flags = CANFD_RX_FIFO_0;

    fsp_err_t err = obj->instance->p_api->open(obj->instance->p_ctrl, &obj->cfg_copy);
    return (err == FSP_SUCCESS) ? idx : 0;
}

unsigned char can_rderror(can_t *obj)
{
    MBED_ASSERT(obj);
    can_info_t info;
    if (obj->instance->p_api->infoGet(obj->instance->p_ctrl, &info) != FSP_SUCCESS) {
        return 0;
    }
    return (unsigned char) info.error_count_receive;
}

unsigned char can_tderror(can_t *obj)
{
    MBED_ASSERT(obj);
    can_info_t info;
    if (obj->instance->p_api->infoGet(obj->instance->p_ctrl, &info) != FSP_SUCCESS) {
        return 0;
    }
    return (unsigned char) info.error_count_transmit;
}
